fix phone wrap issue

--- a/src/pages/PcPreview/Home.less
+++ b/src/pages/PcPreview/Home.less
@@ -210,6 +210,7 @@ body {
     font-weight: bold;
     color: #3e3e3e;
     margin-left: 6px;
+    white-space: nowrap;
   }
   .phoneIcon {
     width: 14px;
